--- a/asgn1/code/Makefile
+++ b/asgn1/code/Makefile
@@ -1,3 +1,8 @@
+#*************************************************
+# Justin Satriano		(jsatrian)
+# Sriharsha Madala	(srmadala)
+#*************************************************
+
 # $Id: Makefile,v 1.8 2022-04-05 11:32:20-07 - - $
 
 MKFILE      = Makefile
