--- a/asgn2/code/Makefile
+++ b/asgn2/code/Makefile
@@ -1,3 +1,8 @@
+#*************************************************
+# Justin Satriano    (jsatrian)
+# Sriharsha Madala   (srmadala)
+#*************************************************
+
 # $Id: Makefile,v 1.48 2022-04-07 15:59:12-07 - - $
 
 MKFILE      = Makefile
